@@ -5,6 +5,7 @@
 	old messages, reconnecting.
 
 *) support shared folders.
+	-- started.  see if there are any bugs in there.
 
 *) bounce messages
 
